fix faq spacing on mobile

--- a/_sass/_faq.scss
+++ b/_sass/_faq.scss
@@ -12,7 +12,11 @@ $faq__cards-per-row: 3;
         margin: 0;
         padding: 0 10%;
         padding-top: 3rem;
-        padding-bottom: 5rem;
+
+        @include media-desktop {
+            padding-bottom: 5rem;
+        }
+
     }
 }
 
